shared/fmod/fmodex.odin


FMOD_EVENT_INFO :: struct {
	memoryused:      i32,
	positionms:      i32,
	lengthms:        i32,
	channelsplaying: i32,
	instancesactive: i32,
	maxwavebanks:    i32,
	wavebankinfo:    ^FMOD_EVENT_WAVEBANKINFO,
	projectid:       u32,
	systemid:        u32,
	audibility:      f32,
	numinstances:    i32,
	instances:       ^^FMOD_EVENT,
	guid:            ^FMOD_GUID,
}

FMOD_EVENT_SOUNDDEFINFO :: struct {
	name:       cstring,
	numentries: i32,
	entrynames: ^cstring,
	entrytypes: ^FMOD_EVENT_SOUNDDEF_ENTRYTYPE,
}

FMOD_EVENT_LOADINFO :: struct {
	size:                       u32,
	encryptionkey:              cstring,
	sounddefentrylimit:         f32,
	loadfrommemory_length:      u32,
	override_category_vals:     i32,
	sizeof_instancepool_simple: u32,
}

FMOD_MUSIC_INFO :: struct {
	starving:           i32,
	all_samples_loaded: i32,
}

FMOD_MUSIC_ENTITY :: struct {
	name: cstring,
	id:   u32,
}

FMOD_MUSIC_ITERATOR :: struct {
	value:  ^FMOD_MUSIC_ENTITY,
	filter: cstring,
}

FMOD_MUSIC_SAMPLE_INFO :: struct {
	segment_id: u32,
	index:      u32,
	filename:   cstring,
}

FMOD_MUSIC_SEGMENT_INFO :: struct {
	segment_id: u32,
	theme_id:   u32,
}

FMOD_OUTPUT_STATE :: struct {
	plugindata:    rawptr,
	readfrommixer: FMOD_OUTPUT_READFROMMIXER,
}

FMOD_OUTPUT_DESCRIPTION :: struct {
	name:          cstring,
	version:       u32,
	polling:       i32,
	getnumdrivers: FMOD_OUTPUT_GETNUMDRIVERSCALLBACK,
	getdrivername: FMOD_OUTPUT_GETDRIVERNAMECALLBACK,
	getdrivercaps: FMOD_OUTPUT_GETDRIVERCAPSCALLBACK,
	init:          FMOD_OUTPUT_INITCALLBACK,
	close:         FMOD_OUTPUT_CLOSECALLBACK,
	update:        FMOD_OUTPUT_UPDATECALLBACK,
	gethandle:     FMOD_OUTPUT_GETHANDLECALLBACK,
	getposition:   FMOD_OUTPUT_GETPOSITIONCALLBACK,
	lock:          FMOD_OUTPUT_LOCKCALLBACK,
	unlock:        FMOD_OUTPUT_UNLOCKCALLBACK,
}
